--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "autoprefixer": "^10.2.4",
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
+    "polished": "^4.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1",
-    "styled-system": "^5.1.5"
+    "react-select": "^4.2.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
