--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "framer-motion": "^3.3.0",
-    "next": "10.0.6",
+    "next": "canary",
     "polished": "^4.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
